--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </div>
     <div class="home-perfil">
         <img id="mi_imagen"
-             src='/images/Killua-Avatar2.gif'
+             src='images/Killua-Avatar2.gif'
              width="600" height="600"/>
     </div>
 </section>
