--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="about-content">
             <div class="column-left">
                 <img
-                    src="/images/Killua.png"/>
+                    src="images/Killua.png"/>
             </div>
             <div class="column-right">
                 <h2>Hey, ich bin Kirit!</h2>
